@@ -14,7 +14,7 @@ BEGIN {
 }
 
 use strict;
-use Test::More 'no_plan';
+use Test::More tests => 28;
 
 use TieOut;
 use MakeMaker::Test::Utils;
